fix : fixed the styling on mobile view.

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -64,11 +64,11 @@
   .main{
       flex-direction: column-reverse;
   }
-  .sec-1{
+  .sec1{
       width: 100%;
       border-bottom: 2px solid black;
   }
-  .sec-2{
+  .sec2{
       width: 100%;
       height: 3em;
       flex-direction: row;
@@ -78,7 +78,7 @@
       height: 3em;
       border-right: 2px solid black;
   }
-  .sec-2:last-child{
+  .sec2:last-child{
       border-right: none;
   }
 }
